removed repeats and fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -103,5 +103,5 @@
   width: 24px;
   height: 24px;
   margin: 14px;
-  width: fit-content;
+  /* width: fit-content; */
 }
